--- a/Index_2.css
+++ b/Index_2.css
@@ -5,10 +5,19 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 15px;
 	line-height: 1.5;
-	background-color: #f4f4f4;	
+	background-image: url("./grass.jpg");
+	/*background-color: #C5F9A8;	*/
 	padding: 0;
 	margin: 0;
 }
+
+img {
+	height:300px;
+	width:400px;
+	margin: auto;
+	margin-top: 40px;
+}
+
 
 
 /*Global*/
@@ -37,7 +46,7 @@ header{
 	background:#35424a;
 	color:#ffffff;
 	padding-top: 30px;
-	min-height:70px;
+	min-height:100px;
 	border-bottom:#8491d 3px solid;
 }
 
@@ -51,7 +60,7 @@ header a{
 header li{
 	float:left;
 	display:inline;
-	padding: 0 20px 0 20px;
+	padding: 0px 20px 0px 20px;
 }
 
 header #branding{
