--- a/Index.css
+++ b/Index.css
@@ -25,7 +25,7 @@ ul{
 
 .button_1{
 	height:38px;
-	background:#e8491d;
+	background:#5ef50a;
 	border:0;
 	padding-left:20px;
 	padding-right: 20px;
@@ -68,7 +68,7 @@ header nav{
 }
 
 header .highlight, header .current a{
-	color:#e8491d;
+	color:#5ef50a;
 	font-weight:bold;
 }
 
@@ -158,7 +158,7 @@ footer{
 	padding:20px;
 	margin-top:20px;
 	color:#ffffff;
-	background-color:#e8491d;
+	background-color:#5ef50a;
 	text-align: center;
 }
 
@@ -167,9 +167,12 @@ footer{
 
 
 
-/*Sidebar Section*/
+/*Section*/
 
-
+section .highlight{
+	color:#5ef50a;
+	font-weight:bold;
+}
 
 
 /*Main Section*/
