--- a/Index_2.css
+++ b/Index_2.css
@@ -77,7 +77,7 @@ header nav{
 }
 
 header .highlight, header .current a{
-	color:#e8491d;
+	color:#5ef50a;
 	font-weight:bold;
 }
 
@@ -167,7 +167,7 @@ footer{
 	padding:20px;
 	margin-top:20px;
 	color:#ffffff;
-	background-color:#e8491d;
+	background-color:#5ef50a;
 	text-align: center;
 }
 
